--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 <body>
     <div class="bg-image"></div>
+    <div class="music-player">
+        <div class="header">
 
+        </div>
+        <div class="player">
+
+        </div>
+    </div>
 
 
 
