--- a/index.html
+++ b/index.html
@@ -13,10 +13,35 @@
     <div class="bg-image"></div>
     <div class="music-player">
         <div class="header">
+            <div class="image">
+                <img src="./images/6123.avif" alt="song-pic">
+            </div>
+            <div class="description">
+                <div class="system">Windows</div>
+                <div class="s-name">Hello</div>
+                <div class="singer">Evanescence</div>
 
+            </div>
+            <div class="clear"></div>
         </div>
         <div class="player">
+            <div class="time-line">
+                <div class="background"></div>
+                <div class="fill"></div>
+                <div class="fill-btn"></div>
 
+            </div>
+            <div class="under-time-line">
+                <span id="time-past">0:00</span>
+                <span id="time-left">-0:00 </span>
+
+            </div>
+            <div class="buttons">
+                <button class="btn"><img id="back-btn" src="./images/music-music-player-player-2-svgrepo-com (1).svg" alt="back"></button>
+                <button class="btn"><img id="play-pause" src="./images/music-play-play-button-svgrepo-com (1).svg" alt="play"></button>
+                <button class="btn"><img id="next-btn" src="./images/music-next-next-button-svgrepo-com (1).svg" alt="next"></button>
+
+            </div>
         </div>
     </div>
 
