changes are added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="bg-image"></div>
     <div class="music-player">
+        <audio src="./musics/Evanescence-Hello-128.mp3" id="audio" controls></audio>
         <div class="header">
             <div class="image">
                 <img src="./images/6123.avif" alt="song-pic">
@@ -27,8 +28,8 @@
         <div class="player">
             <div class="time-line">
                 <div class="background"></div>
-                <div class="fill"></div>
-                <div class="fill-btn"></div>
+                <div id="fill" class="fill"></div>
+                <div id="fill-btn" class="fill-btn"></div>
 
             </div>
             <div class="under-time-line">
@@ -38,7 +39,7 @@
             </div>
             <div class="buttons">
                 <button class="btn"><img id="back-btn" src="./images/music-music-player-player-2-svgrepo-com (1).svg" alt="back"></button>
-                <button class="btn"><img id="play-pause" src="./images/music-play-play-button-svgrepo-com (1).svg" alt="play"></button>
+                <button class="btn"><img id="play-pause" src="./images/music-play-play-button-svgrepo-com (1).svg" onclick=" play_and_pause()" alt="play"></button>
                 <button class="btn"><img id="next-btn" src="./images/music-next-next-button-svgrepo-com (1).svg" alt="next"></button>
 
             </div>
