--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
 
-
+    <script src="./javascript/slider.js"></script>
     <script src="./javascript/script.js"></script>
 </body>
 </html>
