--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
             </div>
             <div class="buttons">
-                <button class="btn"><img id="back-btn" src="./images/rewind-5-seconds-back-svgrepo-com.svg" alt="back"></button>
+                <button class="btn"><img id="back-btn" src="./images/rewind-5-seconds-back-svgrepo-com.svg" alt="back" onclick="back_5()"></button>
                 <button class="btn"><img id="play-pause" src="./images/music-play-play-button-svgrepo-com (1).svg" onclick=" play_and_pause()" alt="play"></button>
-                <button class="btn"><img id="next-btn" src="./images/rewind-5-seconds-forward-svgrepo-com (1).svg" alt="next"></button>
+                <button class="btn"><img id="next-btn" src="./images/rewind-5-seconds-forward-svgrepo-com (1).svg" alt="next" onclick="next_5()"></button>
 
             </div>
             <div class="volume-style">
